[FIX] normalize lowercase attribute names

--- a/demo/index.html
+++ b/demo/index.html
@@ -28,7 +28,7 @@
                              hmackey="[[ hmacKey ]]"
                              timeout="2000"
                              typeset="true"
-                             shape-parameters="{
+                             shapeparameters="{
                                  doBeautification: true,
                                  rejectDetectionSensitivity: 0
                              }"
