--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -299,7 +299,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
             if (this._inkPaper) {
                 this._inkPaper.recognize();
             }
-        },
+        },]"
         /**
          * Get available languages
          */
@@ -309,15 +309,15 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
             }
         },
         /**
-         * Get parent
-         * @private
+         * Return the stats allowing to monitor what ink size is send to the server.
+         * @returns Stats objects format {strokesCount : 0, pointsCount : 0, byteSize : 0, humanSize : 0, humanUnit : 'BYTE'} humanUnit could have the values BYTE, BYTES, KiB, MiB
          */
-        get parent() {
-            if (this.parentNode.nodeType === Node.DOCUMENT_FRAGMENT_NODE) {
-                return this.parentNode.host;
+        getStats: function () {
+            if (this._inkPaper) {
+                return this._inkPaper.getStats();
             }
-            return this.parentNode;
-        },
+        }
+        ,
         ready: function () {
             this._inputArea = this.querySelector('#myscript-input-area');
             this._paperToast = this.querySelector('paper-toast');
