--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -303,6 +303,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
         /**
          * Get available languages
          */
+        //FIXME Naming is not coherent with other webcomponents
         getAvailableLanguages: function (inputMode) {
             if (this._inkPaper) {
                 this._inkPaper.getAvailableLanguages(inputMode);
