--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -318,7 +318,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
         },
         /**
          * Return the stats allowing to monitor what ink size is send to the server.
-         * @returns Stats objects format {strokesCount : 0, pointsCount : 0, byteSize : 0, humanSize : 0, humanUnit : 'BYTE'} humanUnit could have the values BYTE, BYTES, KiB, MiB
+         * Stats objects format {strokesCount : 0, pointsCount : 0, byteSize : 0, humanSize : 0, humanUnit : 'BYTE'} humanUnit could have the values BYTE, BYTES, KiB, MiB
          */
         getStats: function () {
             if (this._inkPaper) {
