--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="HandheldFriendly" content="true" />
 
     <script src="../webcomponentsjs/webcomponents-lite.js"></script>
@@ -14,7 +16,7 @@
         }
     </style>
 </head>
-<body unresolved>
+<body touch-action="none" unresolved>
 
 <iron-component-page></iron-component-page>
 
