[DEV] Update doc

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,7 @@
 </style>
 <body touch-action="none">
 
-    <myscript-common-element host="webdemo.myscript.com"
+    <myscript-common-element host="webdemoapi.myscript.com"
                              type="SHAPE"
                              applicationkey="9faa1259-48ba-44c4-9857-b3c86d986f94"
                              hmackey="fb166b5d-3ffd-93bd-7b5b-bca0fe2216a0"
