--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -417,9 +417,10 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
         },
         _onError: function (e) {
             this.fire(e.type, e.detail);
-            this._paperToast.text = e.detail.message;
-            this._paperToast.fitIn =
-            this._paperToast.show();
+            if (e.detail && e.detail.message) {
+                this._paperToast.text = e.detail.message;
+                this._paperToast.fitIn = this._paperToast.show();
+            }
         },
         _computeCanClear: function (canUndo, canRedo) {
             return canUndo || canRedo;
