--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -390,7 +390,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
                 return this._inkPaper.getStats();
             }
         },
-        ready: function () {
+        attached: function () {
             this._inputArea = this.querySelector('#myscript-input-area');
             this._paperToast = this.querySelector('paper-toast');
             this._penParameters = new MyScript.PenParameters();
