Improving the webcomponent

--- a/demo/init-error.html
+++ b/demo/init-error.html
@@ -25,13 +25,10 @@
 </style>
 <body touch-action="none">
 
-<myscript-common-element
-    host="cloud-internal-stable.visionobjects.com"
-    type="SHAPE"
-    applicationkey="9faa1259-48ba-44c4-9857-b3c86d986f94"
-    hmackey="fb166b5d-3ffd-93bd-7b5b-bca0fe2216a0"
-    timeout="2000"
-    typeset="true">
+<myscript-common-element host="thisisnotanhost" hmackey="WRONG" type="MATH" protocol="REST">
 </myscript-common-element>
+<script>
+
+</script>
 </body>
 </html>
